--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^20.1.0",
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
+    "angular-cli-ghpages": "^2.0.3",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
