--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
     "angular-cli-ghpages": "^2.0.3",
+    "angularx-qrcode": "^20.0.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
